# dataset-e-stat

./: .gitignore  backfill_meta_info.py  dataset.yml  dbt_project.yml  fdl.toml  main.py  pipeline.py  profiles.yml  pyproject.toml
.github/workflows/: deploy.yml  sync.yml
macros/: e_stat_mart_view.sql  e_stat_stg_transform.sql
models/: _time_spine.yml  metricflow_time_spine.sql
models/boundary/mart/: _schema.yml  _semantic.yml  small_area.sql
models/boundary/raw/: _schema.yml  raw_census_boundary.sql
models/boundary/stg/: _schema.yml  stg_census_boundary.sql
models/main/: _schema.yml  _sources.yml  meta_info.sql  raw_meta_info.sql  raw_stats_list.sql  stat_tables.sql  stats_catalog.sql  stats_field.sql  stats_list.sql
models/ssds/mart/: _schema.yml  item_catalog.sql
models/ssds/raw/: _schema.yml  _sources.yml  raw_stat_tables.sql
models/ssds/stg/: _schema.yml  stg_municipal_administration.sql  stg_municipal_culture.sql  stg_municipal_economy.sql  stg_municipal_education.sql  stg_municipal_health.sql  stg_municipal_housing.sql  stg_municipal_labor.sql  stg_municipal_land.sql  stg_municipal_population.sql  stg_municipal_safety.sql  stg_municipal_welfare.sql  stg_pref_administration.sql  stg_pref_culture.sql  stg_pref_economy.sql  stg_pref_education.sql  stg_pref_health.sql  stg_pref_housing.sql  stg_pref_labor.sql  stg_pref_land.sql  stg_pref_population.sql  (+2 more)
pipelines/: __init__.py  census_boundary.py  meta_info.py  ssds.py  stats_list.py
seeds/: _schema.yml  seed_stats_field.csv
tests/: item_catalog_has_all_categories.sql  stats_field_coverage.sql
(+24 files in other folders)
